clang/test/BSC/Negative/Ownership/Owned/safe_free_nested_owned_pointer2/safe_free_nested_owned_pointer2.cbs
// RUN: %clang %s -o %t.output
// RUN: %t.output
// expected-no-diagnostics

T* _Owned safe_malloc<T>(T value) {
  T * p = (T *) malloc( sizeof(T) );
  *p = value;
  return __take_from_raw(p);
}

void safe_free<T>(T* _Owned p) {
  free( __move_to_raw(p) );
}

int main() {
    int * _Owned p = safe_malloc(2);
    int * _Owned * _Owned pp = safe_malloc(p);
    safe_free((void * _Owned) *pp);
    safe_free((void * _Owned) pp);
    return 0;
}
